# CRYSTAL_input_gen

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_test.yml
basissets/: 6-31G.txt  6-31Gs.txt
inputgen/: inputgen.py  main.py  outputanalysis.py
inputgen/basissets/: 6-311G.txt  6-311GS.txt  6-311GSS.txt  6-31G2df-p.txt  6-31GSS.txt  6-31Gs.txt  CC-PVDZ.txt  CC-PVQZ.txt  DEF2-TZVP.txt  PVDZ.txt  VDZ.txt  VTZ.txt  cc-PVTZ.txt  def2-SVP.txt  def2-SVPD.txt
tests/: test_inputgen.py  test_outputanalysis.py
tests/test_ouput/: slurm-983371.out
tests/test_output/: slurm-999085.out
